k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wehrmacht-app
  labels:
    app: wehrmacht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wehrmacht
  template:
    metadata:
      labels:
        app: wehrmacht
    spec:
      containers:
        - name: wehrmacht
          image: keremmert/wehrmachtencyclopedia:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/generals
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/generals
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
