k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wehrmacht-service
  labels:
    app: wehrmacht
spec:
  type: NodePort
  selector:
    app: wehrmacht
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 307000
    protocol: TCP
    name: http
